# cmake_config_example

./: LICENSE  README.md
client/: CMakeLists.txt
client/src/: client.c
lib/: CMakeLists.txt  Config.cmake.in
lib/include/: pont.h
lib/src/: pont.c
